--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   easy_localization: ^3.0.0
+  auto_size_text_pk: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +51,7 @@ flutter:
   assets:
    - assets/images/
    - assets/icon/icon.png
+   - assets/lang/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
